GNOME Bugzilla – Bug 697350
nautilus extension not loading
Last modified: 2013-05-11 10:22:56 UTC
Hi. The nautilus extension is not loading on at least OpenBSD for me. $ nautilus ** (nautilus:618): WARNING **: `nautilus_module_initialize': Unable to resolve symbol In these files I can see: src/terminal-nautilus.c: terminal_nautilus_register_type (module); src/terminal-nautilus.c: terminal_nautilus_menu_item_register_type (module); But I cannot seem to find where terminal_nautilus_register_type nor terminal_nautilus_menu_item_register_type are defined. I maybe overlooking the obvious... Thanks.
The nautilus extension isn't supposed to be shipped by distributions atm; it's experimental. That said, looks like a problem with the exported symbols from the module, I can see the same thing on linux.
(In reply to comment #1) > The nautilus extension isn't supposed to be shipped by distributions atm; it's > experimental. Sure thing, I saw it's disabled by default. But I wanted to report it notheless :-) > That said, looks like a problem with the exported symbols from the module, I > can see the same thing on linux. Ok good... well "good" as in it's not platform specific. Thanks.
Should be fixed on master and 3-8.
(In reply to comment #1) > The nautilus extension isn't supposed to be shipped by distributions atm; it's > experimental. > Should we use nautilus-open-terminal extensions instead? We are activating both in Gentoo and, after reading your comment, looks like we should disable gnome-terminal one... or do you plan to stop considering it experimental "soon" (for 3.8 cycle I mean)
The extension's been fixed to work, on both master and 3-8 (all fixes are in 3.8.1), and enabled by default on master.
Would you (as upstream) be ok on relying on it since 3.8.1 or should we wait for 3.10 to offer it to our users? (we currently have a suboptimal situation as our users will often get two menu entries: one using gnome-terminal extensions and the other using old nautilus-open-terminal extention)
Since 3.8.2 is imminent and the last 3.8 release, so you'd have to backport any additional future fixes from master... otoh it would get me early testing of the extension :-)