nautilus: Export the module entry points

https://bugzilla.gnome.org/show_bug.cgi?id=697350
(cherry picked from commit 449738e21bb5a51052a10a8a0b29315943624769)